app frontend logic

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "boilerplate",
 	"subdomain": "efrafa-boilerplate",
+	"domains": [],
 	"description": "My custom node.js boilerplate",
 	"keywords": [
     "express",
