--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,20 @@
 .Spotlight-V100
 .Trashes
 
-# Igore node modules as they can be generated #
+# Node.js #
 ######################
-node_modules/
+lib-cov
+*.seed
+*.log
+*.csv
+*.dat
+*.out
+*.pid
+*.gz
+
+pids
+logs
+results
+
+npm-debug.log
+node_modules
