--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "express": "3.0.6",
 		"consolidate" : "*",
     "swig": "*",
-		"node.packer" : "*",
+		"js-combiner" : "*",
     "less-middleware": "*"
   },
 	"engines": {
